--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         optimize: [Debug, ReleaseFast]
+    if: github.event_name != 'pull_request' || matrix.optimize == 'Debug'
     runs-on: ${{ matrix.os }}
     env:
       ZIG_GLOBAL_CACHE_DIR: ${{ github.workspace }}/.zig-global-cache
