--- a/.github/workflows/release-draft.yml
+++ b/.github/workflows/release-draft.yml
@@ -1,9 +1,11 @@
-name: Draft Release on Tag
+name: Draft Release (manual)
 
 on:
-  push:
-    tags:
-      - "v*"
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: "Tag to draft (e.g. v1.2.3)"
+        required: true
 
 permissions:
   contents: write
@@ -15,11 +17,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Prepare release body
         id: body
+        env:
+          TAG: ${{ inputs.tag }}
         run: |
-          TAG="${GITHUB_REF_NAME}"
           DATE="$(date -u +%Y-%m-%d)"
           OUT="$RUNNER_TEMP/release_body.md"
           cat > "$OUT" << EOF
@@ -52,8 +57,8 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           draft: true
-          name: ${{ github.ref_name }}
-          tag_name: ${{ github.ref_name }}
+          name: ${{ inputs.tag }}
+          tag_name: ${{ inputs.tag }}
           body_path: ${{ steps.body.outputs.path }}
           files: |
             docs/README.md
