--- a/.github/workflows/release-draft.yml
+++ b/.github/workflows/release-draft.yml
@@ -20,6 +20,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Install Zig
+        uses: goto-bus-stop/setup-zig@v2
+        with:
+          version: 0.12.0
+
       - name: Prepare release body
         id: body
         env:
